# rust_query_tool

./: AGENTS.md  BUG_REVIEW.md  CLAUDE.md  Cargo.toml  README.md  bug_0317.md  build.rs  change.md  dba_bug_review.md  features.md  fix.md  fixed.md  formatting.md  freeze_check_report.md  highlighting.md  mariadb.md  mysql.md  oracle.md  oracle_cancel.md  oracle_response.md  session.md  test_tokens.rs  transaction.md
docs/: dba_bug_review_2026-02-21.md  dba_bug_review_2026-02-22.md  dba_bug_review_2026-02-22_20findings.md  dba_bug_review_2026-02-22_additional.md  dba_bug_review_2026-02-22_agent.md  dba_user_bug_review_2026-02-25.md  freeze_debug_checklist.md  general_user_bug_review_2026-02-22.md  general_user_bug_review_2026-02-22_round2.md  general_user_bug_review_2026-02-22_round3.md  general_user_bug_review_2026-02-22_round4.md  result_table_edit_event_bug_review_2026-02-25.md  user_bug_review_2026-02-22.md
scripts/: .codex_autofix_loop_formatting.sh.swp  codex_autofix_loop.sh  codex_autofix_loop_formatting.sh  codex_autofix_loop_intelli.sh  codex_autofix_loop_parser.sh
src/: app.rs  app_icon.rs  icon_fill.rs  lib.rs  main.rs  sql_delimiter.rs  sql_format.rs  sql_parser_engine.rs  sql_text.rs  version.rs
src/auto_format_engine/: mod.rs  stack_scan.rs  types.rs
src/db/: connection.rs  mod.rs  oracle_thin.rs  session.rs  session_policy.rs  transaction.rs
src/db/oracle_thin/: client.rs  executor.rs  mod.rs
src/db/query/: executor.rs  mod.rs  mysql_executor.rs  query_tests.rs  script.rs  types.rs
src/splash/: animation.rs  loading.rs  mod.rs  overlay.rs  renderer.rs  shaders.rs  standalone.rs
src/sql_parser_engine/: boundary.rs  engine.rs  mod.rs  state.rs  tests.rs
src/tui/: mod.rs
src/ui/: connection_dialog.rs  constants.rs  find_replace.rs  intellisense.rs  intellisense_context.rs  log_viewer.rs  main_window.rs  menu.rs  mod.rs  object_browser.rs  query_history.rs  query_tabs.rs  result_table.rs  result_tabs.rs  settings_dialog.rs  sql_depth.rs  syntax_highlight.rs  text_buffer_access.rs  theme.rs  token_depth.rs
src/ui/intellisense_context/: tests.rs
src/ui/sql_editor/: dba_tools.rs  execution.rs  formatter.rs  highlighting.rs  intellisense.rs  intellisense_host.rs  intellisense_state.rs  mod.rs  query_text.rs  session_monitor.rs  sql_editor_tests.rs  undo_history.rs
src/ui/sql_editor/intellisense/: completion.rs  context.rs  helpers.rs  local_symbols.rs  mod.rs  popup.rs  runtime.rs  tests.rs
src/ui/syntax_highlight/: syntax_highlight_tests.rs
src/utils/: arithmetic.rs  config.rs  crash_handler.rs  credential_store.rs  logging.rs  memory.rs  mod.rs
test/: Untitled  oracle splitter final boss test.sql  oracle_format_final_boss.sql  oracle_format_final_boss_v2.sql  oracle_format_ultimate_boss.sql  quit.sql  qwer.sql  test1.txt  test10.txt  test11.txt  test12.sql  test13.sql  test14.sql  test15.sql  test16.sql  test17.sql  test18.sql  test19.sql  test2.txt  test20.sql  test21.sql  test22.sql  test23.sql  test24.sql  test25.sql  test26.sql  test4.txt  test8.txt  test9.txt  test_all.sql  test_format_pivot.sql  test_open_with.sql
test_mariadb/: test1.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
test_mysql/: test2.txt
tests/: concurrency_multithread_guards.rs  debug_assert_side_effect_guards.rs  division_operator_guards.rs  oracle_oci_script_probe.rs  panic_code_guards.rs  thread_safe_state_guards.rs
