[package]
name = "space_query"
version = "0.1.0"
edition = "2021"
description = "SPACE Query: a Toad-like Oracle Query Tool built with Rust and FLTK"
authors = ["Developer"]
build = "build.rs"

[[bin]]
name = "space_query"
path = "src/main.rs"
test = false

[dependencies]
fltk = { version = "1.5", features = ["no-pango"] }
oracle = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "5.0"
once_cell = "1.19"
keyring = { version = "3", default-features = false }
libc = "0.2"
miniquad = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.60", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
libdbus-sys = { version = "0.2.7", default-features = false, features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# Keep unwinding enabled so runtime panic guards (catch_unwind) can recover
# in production instead of terminating the whole process immediately.
panic = "unwind"
strip = true

[build-dependencies]
cc = "1.2"
winres = "0.1"

[patch.crates-io]
miniquad = { path = "vendor/miniquad" }
