[package]
name = "space_query"
version = "0.1.0"
edition = "2021"
description = "SPACE Query: a Toad-like SQL Query Tool built with Rust and FLTK (Oracle, MySQL, MariaDB)"
authors = ["Developer"]
build = "build.rs"

[[bin]]
name = "space_query"
path = "src/main.rs"
test = false

[features]
# Build without the OpenGL splash screen (useful for CI, headless environments,
# or users who prefer a faster startup).
# Usage: cargo build --features no-splash
no-splash = []

[dependencies]
fltk = { version = "1.5", features = ["no-pango"] }
oracle = "0.6"
mysql = "25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
dirs = "6.0"
once_cell = "1.19"
keyring = { version = "3", default-features = false }
libc = "0.2"
miniquad = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
windows-sys = { version = "0.61", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
libdbus-sys = { version = "0.2.7", default-features = false, features = ["vendored"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# Keep unwinding enabled so runtime panic guards (catch_unwind) can recover
# in production instead of terminating the whole process immediately.
panic = "unwind"
strip = true

[build-dependencies]
cc = "1.2"
winres = "0.1"

[dev-dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2", features = ["full", "visit"] }

[patch.crates-io]
miniquad = { path = "vendor/miniquad" }
